welcome.lessons.welcome.array.has271.Has271.scala.error
has271:9: error: illegal start of simple expression
			}
                        ^has271:14: error: Unmatched closing brace '}' ignored here
 }
 ^